--- a/Sentimental/.classpath
+++ b/Sentimental/.classpath
@@ -5,5 +5,11 @@
 	<classpathentry kind="lib" path="C:/Users/Avee Arora/Documents/NEU/NEU Fall 2016/big data/hadoop/hadoop-2.7.3/hadoop-2.7.3/share/hadoop/common/hadoop-common-2.7.3.jar"/>
 	<classpathentry kind="lib" path="C:/Users/Avee Arora/Documents/NEU/NEU Fall 2016/big data/hadoop/hadoop-2.7.3/hadoop-2.7.3/share/hadoop/common/hadoop-mapreduce-client-core-2.7.3.jar"/>
 	<classpathentry kind="lib" path="C:/Users/Avee Arora/Documents/NEU/NEU Fall 2016/big data/hadoop/hadoop-2.7.3/hadoop-2.7.3/share/hadoop/mapreduce/hadoop-mapreduce-client-core-2.7.3.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Avee Arora/Desktop/stanford-corenlp-full-2016-10-31/ejml-0.23.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Avee Arora/Desktop/stanford-corenlp-full-2016-10-31/jollyday.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Avee Arora/Desktop/stanford-corenlp-full-2016-10-31/stanford-corenlp-3.7.0.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Avee Arora/Desktop/stanford-corenlp-full-2016-10-31/stanford-corenlp-3.7.0-javadoc.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Avee Arora/Desktop/stanford-corenlp-full-2016-10-31/stanford-corenlp-3.7.0-models.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Avee Arora/Desktop/stanford-corenlp-full-2016-10-31/stanford-corenlp-3.7.0-sources.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
